# Space-Crasher

./: CMakeLists.txt  Space Crasher.sln  Space Crasher.vcxproj  Space Crasher.vcxproj.filters  resource.h
Debug/: CL.read.1.tlog  CL.write.1.tlog  Space Crasher.exe.CodeAnalysisLog.xml  Space Crasher.ilk  Space Crasher.lastbuildstate  Space Crasher_manifest.rc  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
Debug/img/explosion/.svn/: dir-prop-base
Debug/img/explosion/.svn/text-base/: 0002.bmp.svn-base
Release/: Space Crasher.lastbuildstate
doc/: Specifiche.odt
font/.svn/: entries
img/: Thumbs.db
img/.svn/: entries
img/.svn/text-base/: asteroide.bmp.svn-base
img/explosion/: Thumbs.db
img/explosion/.svn/: entries
img/explosion/.svn/text-base/: 0001.bmp.svn-base  0005.bmp.svn-base
src/: Asteroide.h  Explosion.h  FilaAsteroidi.h  GameEngine.h  Navicella.h  PioggiaAsteroidi.h  Player.h  Testo.h  asteroid.cpp  asteroid.h  config.h.in  main.c  main.cpp  texture.cpp  texture.h
